<package format="2">
  <name>libro_model</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for libro_model</p>
    <p>This package contains configuration data, 3D models and launch files
for libro_model robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>

  <export>
    <architecture_independent />
    <!-- set gazebo environment value -->
    <gazebo_ros gazebo_model_path="${prefix}/models/"/>
  </export>

</package>